# ai-librarian

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  test.py
backend/ai_librarian_monorepo/ai_librarian_apis/: .env.example  README.md  pyproject.toml  schemas.py
backend/ai_librarian_monorepo/ai_librarian_apis/core/: config.py
backend/ai_librarian_monorepo/ai_librarian_apis/logging_configs/: config.json
backend/ai_librarian_monorepo/ai_librarian_apis/routes/: agents.py  sys.py
backend/ai_librarian_monorepo/ai_librarian_apis/src/ai_librarian_apis/: deps.py  main.py  schemas.py  utils.py
backend/ai_librarian_monorepo/ai_librarian_apis/src/ai_librarian_apis/core/: cors.py  global_vars.py  lifespan.py  logger.py  openapi.py  settings.py
backend/ai_librarian_monorepo/ai_librarian_apis/src/ai_librarian_apis/logging_configs/: config.json
backend/ai_librarian_monorepo/ai_librarian_apis/src/ai_librarian_apis/routes/: agents.py  react.py  sys.py  system.py  tools.py
backend/ai_librarian_monorepo/ai_librarian_apis/src/ai_librarian_apis/schemas/: error.py  react.py  schemas.py  sse.py  sse_example.py  system.py  tools.py
backend/ai_librarian_monorepo/ai_librarian_apis/src/ai_librarian_apis/utils/: deps.py  utils.py
backend/ai_librarian_monorepo/ai_librarian_core/: README.md  pyproject.toml
backend/ai_librarian_monorepo/ai_librarian_core/src/ai_librarian_core/agents/deep_search/: base.py
backend/ai_librarian_monorepo/ai_librarian_core/src/ai_librarian_core/agents/react/: async.py  asynchronous.py  base.py  state.py  sync.py  synchronous.py
backend/ai_librarian_monorepo/ai_librarian_core/src/ai_librarian_core/graph/: react.py  states.py
backend/ai_librarian_monorepo/ai_librarian_core/src/ai_librarian_core/models/: llm_config.py  llmconfig.py  openai_message.py  tool.py  used_tool.py
backend/ai_librarian_monorepo/ai_librarian_core/src/ai_librarian_core/tools/: date_time.py  google_books.py  google_search.py  ncl_crawler.py  ncl_search.py  open_weather_map.py  tools.py  youtube.py
backend/ai_librarian_monorepo/ai_librarian_core/src/ai_librarian_core/tools/langchain_tools/: google_books.py  ncl_crawler.py
backend/ai_librarian_monorepo/ai_librarian_core/src/ai_librarian_core/utils/: uuid.py
backend/ai_librarian_monorepo/ai_librarian_core/src/ai_librarian_core/workflows/: react.py
backend/ai_librarian_monorepo/ai_librarian_core/src/ai_librarian_core/wrapper/: google_books.py  ncl_crawler.py  ncl_search.py
backend/app/: main.py  utils.py
backend/app/apis/: agent.py  agents.py  sys.py
backend/app/core/: config.py  cors.py  setting.py  settings.py
backend/app/models/: llmconfig.py  schema.py  schemas.py  state.py  states.py  toolcall.py
backend/app/services/: agent.py  graph.py  helper.py  prompts.py  tools.py  workflows.py
backend/app/services/tools/: google_books.py  helper.py  tools.py
backend/workspace/agent-apis/: main.py  pyproject.toml  utils.py
backend/workspace/agent-apis/core/: config.py  cors.py
backend/workspace/agent-apis/models/: llmconfig.py  schemas.py
backend/workspace/agent-apis/routes/: agents.py  sys.py
backend/workspace/agent-core/: pyproject.toml
backend/workspace/agent-core/src/agent_core/: graphs.py  states.py
backend/workspace/agent-core/src/agent_core/models/: llmconfig.py  openai_message.py  toolcall.py
backend/workspace/agent-core/src/agent_core/tools/: google_books.py  helper.py  ncl_scraper.py  tools.py
backend/workspace/agent-core/src/agent_core/tools/langchain_tools/: time.py
frontend/: index.html  package-lock.json  package.json
frontend/CubismSdkForWeb-5-r.3/: cubism-info.yml
frontend/CubismSdkForWeb-5-r.3/Samples/TypeScript/Demo/: chat-agent.js  index.html
frontend/CubismSdkForWeb-5-r.3/Samples/TypeScript/Demo/src/: main.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: ChatAgent.vue  live2D.vue
