[project]
name = "ai-librarian"
version = "0.2.0"
description = ""
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "agent-core",
    "agent-apis",
]

[tool.uv.workspace]
members = ["workspace/*"]

[tool.uv.sources]
agent-core = { workspace = true }
agent-apis = { workspace = true }

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.pyright]
typeCheckingMode = "standard"
include = [
    "workspace/*",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "ASYNC", "UP", "FAST001"]
