[project]
name = "ai-librarian"
version = "0.2.0"
description = ""
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "ai-librarian-core",
    "ai-librarian-apis",
]

[tool.uv.workspace]
members = ["ai_librarian_monorepo/*"]

[tool.uv.sources]
ai-librarian-core = { workspace = true }
ai-librarian-apis = { workspace = true }

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.pyright]
typeCheckingMode = "standard"
include = [
    "ai_librarian_monorepo/*",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "ASYNC", "UP", "FAST001"]
ignore = ["D100", "D102", "D103", "D105"]
