[project]
name = "agent-core"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.0.2",
    "httpx>=0.28.1",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.61",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "langsmith>=0.3.42",
    "playwright>=1.52.0",
    "pydantic>=2.11.5",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"